--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <body>
       <h1>This is a Header</h1>
-      <p>This is a paragraph.</p>
+      <p>This is my paragraph.</p>
       <p>Hello World!</p>
    </body>
 </html>
